# haskell-wtsdvc

./: build  dvc-plugin.c  wtsdvc.cabal
cbits/: dvc-plugin.c  logging.c  logging.h  wts-plugin-api.h
src/Network/WtsDvc/: Client.hs
src/Network/WtsDvc/Client/: Internal.hs  TH.hs
test/: Plugin.hs
